@@ -5,6 +5,8 @@ ChangeLog
 
 SVN TRUNK
 
+- A slightly more old-school and analog-like attack stage curve
+  is being adopted on all envelope generators. (EXPERIMENTAL)
 - Improved filters parameter sensitivity (cutoff, reso).
 - Experimental LV2 Time designated port support (Delay BPM). 
 - Preparations for Qt5 migration. (TESTING)
